100% it will work