@@ -1,3 +1,17 @@
 FROM eclipse-temurin:17
+
 COPY build/libs/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
+
+FROM gradle:7.4.1-jdk17-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon -x test
+
+FROM eclipse-temurin:17
+
+EXPOSE 8080
+
+COPY --from=build /home/gradle/src/build/libs/*.jar app.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","app.jar"]
